answer vote and layout bug fix

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -38,6 +38,10 @@ body{
     display: flex;
 }
 
+.flex-right-child {
+    flex: auto;
+}
+
 .vote{
     text-align: center;
 }
@@ -46,7 +50,6 @@ body{
     background-color: #add8e6;
     padding: 1rem;
     margin-right: 1rem;
-    margin-top: 1rem;
     border-radius: 0.5rem;
 }
 
